--- a/Servicentro2.0/packages.config
+++ b/Servicentro2.0/packages.config
@@ -1,5 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="angularjs" version="1.3.12" targetFramework="net40" />
   <package id="bootstrap" version="3.3.1" targetFramework="net40" />
+  <package id="FontAwesome" version="4.2.0" targetFramework="net40" />
   <package id="jQuery" version="1.9.0" targetFramework="net40" />
 </packages>
